# crypto-converter

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: github-actions-tests.yml
app/: .env  api_app.py  quote_consumer_app.py  settings.py
app/adapters/binance/: adapter.py  schemas.py
app/api/: __init__.py  models.py
app/api/errors/: handlers.py
app/api/quotes/: endpoinst.py  schemas.py
app/consumers/: quote.py
app/dependencies/: quote.py  web_app.py
app/domain/: quote.py
app/dto/: symbol.py
app/errors/: exceptions.py
app/infrastructure/: binance.py  logging.py  redis.py
app/repositories/: quoute_repository.py  uow.py
app/utils/: model.py
app/views/: get_conversion.py
tests/docker/: docker-compose.tests.yml
tests/functional/: conftest.py
tests/functional/misc/: models.py
tests/functional/tests/: test_convert.py
tests/functional/utils/: app_client.py  dt_utils.py  enums.py  redis_helper.py
