[tool.poetry]
name = "crypto-converter"
version = "0.1.0"
description = "API for converting crypro currencies"
authors = ["paul1319 <paxa131997@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Web
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
python-binance = "^1.0.19"

# DB
redis = {extras = ["hiredis"], version = "^5.0.3"}

# Logging
loguru = "^0.7.2"

# Another
dependency-injector = "^4.41.0"
pydantic-settings = "^2.2.1"
uvloop = "^0.19.0"
orjson = "^3.9.15"

[tool.poetry.group.dev.dependencies]
# Linting
ruff = "^0.3.2"

# Type checking
mypy = "^1.9.0"

# Tests
pytest = "^7.1.2"
httpx = "^0.27.0"
pytest-sugar = "^1.0.0"
asgi-lifespan = "^2.1.0"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff
[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Mypy
[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_incomplete_defs = false
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true